--- a/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/sound_effects/map_sound2.wav")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/sound_effects/fire.wav")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/menu/", "res://resources/", "res://resources/shaders/", "res://resources/scripts/", "res://assets/", "res://assets/sound_effects/")
 dock_split_1=0
 dock_1="FileSystem,History"
@@ -32,13 +32,13 @@ open_scenes=PackedStringArray("res://main/main.tscn", "res://scenes/managers/day
 current_scene="res://scenes/menu/main_menu.tscn"
 center_split_offset=-322
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/managers/actions_manager.gd", "res://autoload/AudioManager/audio_manager.gd", "res://scenes/enemy/enemy.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/game_objects/flashlight/flashlight.gd", "res://scenes/menu/lost_menu.gd", "res://main/main.gd", "res://scenes/menu/main_menu.gd", "res://scenes/UI/map.gd", "res://scenes/player/player.gd", "res://scenes/menu/rewards_menu.gd", "res://resources/scripts/sound_effect_resource.gd", "res://scenes/managers/stats_manager.gd"]
-selected_script="res://scenes/menu/main_menu.gd"
+open_scripts=["res://scenes/managers/actions_manager.gd", "res://autoload/AudioManager/audio_manager.gd", "res://scenes/managers/day_night_manager.gd", "res://scenes/enemy/enemy.gd", "res://scenes/game_objects/fireplace/fireplace.gd", "res://scenes/game_objects/flashlight/flashlight.gd", "res://scenes/menu/lost_menu.gd", "res://main/main.gd", "res://scenes/menu/main_menu.gd", "res://scenes/UI/map.gd", "res://scenes/player/player.gd", "res://scenes/menu/rewards_menu.gd", "res://resources/scripts/sound_effect_resource.gd", "res://scenes/managers/stats_manager.gd"]
+selected_script="res://scenes/game_objects/fireplace/fireplace.gd"
 open_help=["@GlobalScope"]
 script_split_offset=230
 list_split_offset=0
