--- a/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
+++ b/Nothing Can Go Wrong/.godot/editor/script_editor_cache.cfg
@@ -63,16 +63,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
-"scroll_position": 28.0,
-"selection": true,
-"selection_from_column": 11,
-"selection_from_line": 38,
-"selection_to_column": 46,
-"selection_to_line": 38,
+"row": 25,
+"scroll_position": 10.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -291,16 +287,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 75,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 102,
-"scroll_position": 81.0,
-"selection": true,
-"selection_from_column": 63,
-"selection_from_line": 102,
-"selection_to_column": 75,
-"selection_to_line": 102,
+"row": 258,
+"scroll_position": 251.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -425,16 +417,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 74,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 5,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 11,
-"selection_to_column": 36,
-"selection_to_line": 11,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -443,11 +431,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 17.0,
+"row": 12,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
